--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.min.js"></script>
     
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/addons/p5.sound.min.js"></script>
-    <script type="text/javascript" src="sketch.js"></script>
-    <link href="./style.css" rel="stylesheet"/>
+    <script type="text/javascript" src="./js/sketch.js"></script>
+    <link href="./css/style.css" rel="stylesheet"/>
   </head>
   <body>
   </body>
